# llm_entity_linking

./: README.md  pyproject.toml
app/: entity_linking.py  schema.json  schema.py
app/foundation_models/: chat_openai.py  claude_function_calling.py  google_function_calling.py  mistral_function_calling.py  openai_function_calling.py
app/models/: models.py
app/utils/: callback.py  validation.py
app/utils/secret/: api_keys.py
dataset/: generated_queries.csv  queries.csv  queries_combined_sample.json  queries_sample.csv
experiments/: false_negatives.txt  false_positives.txt  prediction_CLAUDE_OPUS_v1.json  prediction_CLAUDE_SONNET_v1 copy 2.json  prediction_CLAUDE_SONNET_v1 copy.json  prediction_CLAUDE_SONNET_v2.json  prediction_GPT3.json  prediction_GPT3_v5.json  prediction_GPT4_O_v1.json  prediction_GPT4_TURBO_v1.json  prediction_MISTRAL_LARGE_v1.json  prediction_MISTRAL_SMALL_v1.json  recognition.ipynb  temp.json  test.json
