[tool.poetry]
name = "study-entity-linking-new"
version = "0.1.0"
description = ""
authors = ["Lorenz Helle <lorenzhelle@web.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "<4.0,>=3.9"
pandas = "^2.2.2"
langchain = "^0.2.5"
openai = "^1.34.0"
anthropic = "^0.28.1"
mistral = "^18.0.1"
mistralai = "^0.4.0"
google-generativeai = "^0.7.0"
vertexai = "^1.49.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
